--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -9,7 +9,7 @@ body {
 #root {
   display: flex;
   justify-content: center;
-  color: #00cb78;
+  color: black;
   font-family: sans-serif;
-  font-size: 50px;
+  font-size: 35px;
 }
