added add functionality

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -15,6 +15,7 @@ body {
 
 .app-wrapper {
   margin-top: 2 rem;
+  color: white;
   display: grid;
   justify-items: center;
   background-color: #454544;
